# futhorc

./: .gitignore  README.md  index.html  main.js
.github/workflows/: clippy.yml  fmt.yml  tests.yml  zizmor.yml
rust/: Cargo.toml  Makefile
rust/src/: futhorc.rs  lib.rs  main.rs
